--- a/index.html
+++ b/index.html
@@ -47,21 +47,30 @@
                 <a class="botao-index" href="portfolio.html">Veja mais</a>
             </section>
             <section class="secao-inicio blog">
-                <h2>Blog</h2>
+                <h2 class="ultimos-posts">Blog</h2>
                 <small>Últimos posts</small>
                 <ol>
-                    <li class="mais-recente">
+                    <li class="mais-recente" tabindex="1">
                         <a href="blog.html">O essencial de design responsivo</a>
                         <p class="inicio-post">
                             Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web
                             para dispositivos móveis. Mas como começar?
                         </p>
                     </li>
-                    <li>
+                    <li tabindex="1">
                         <a href="blog.html">Por que fazer páginas acessíveis?</a>
+                        <p class="inicio-post">
+                            Tem se falado cada vez sobe a acessibilidade na web. Há diversas técnicas e diretivas a serem
+                            seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?
+                        </p>
                     </li>
-                    <li>
+                    <li tabindex="1">
                         <a href="blog.html">JavaScript não obstrusivo</a>
+                        <p class="inicio-post">
+                            JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e
+                            dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript
+                            em nossas páginas.
+                        </p>
                     </li>
                 </ol>
                 <a class="botao-index" href="blog.html">Veja mais</a>
