--- a/index.html
+++ b/index.html
@@ -40,9 +40,41 @@
             <section class="secao-inicio trabalhos">
                 <h2>Trabalhos</h2>
                 <ul>
-                    <li><img src="imagens/bmw.png" alt="Site da BMW"></li>
-                    <li><img src="imagens/ibm.png" alt="Site da IBM"></li>
-                    <li><img src="imagens/uol.png" alt="Site da UOL"></li>
+                    <li>
+                        <a href="http://www.bmw.com">
+                            <figure>
+                                <img src="imagens/bmw.png" alt="Site da BMW">
+                                <figcaption>BMW.com: melhoria da performance</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="http://www.ibm.com">
+                            <figure>
+                                <img src="imagens/ibm.png" alt="Site da BMW">
+                                <figcaption>IBM.com: design responsivo</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="http://www.uol.com">
+                            <figure>
+                                <img src="imagens/uol.png" alt="Portal UOL">
+                                <figcaption>Uol.com.br: usabilidade melhorada</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="http://terra.com.br">
+                            <figure>
+                                <img src="imagens/terra.png" alt="Portal Terra">
+                                <figcaption>Terra.com.br: arquitetura mais fluída</figcaption>
+                             </figure>
+                        </a>
+                    </li>
                 </ul>
                 <a class="botao-index" href="portfolio.html">Veja mais</a>
             </section>
