--- a/contato_dropdown.html
+++ b/contato_dropdown.html
@@ -13,39 +13,79 @@
 <body>
     <main>
         <h1 class="titulo-principal">Contato</h1>
-        <form>
-            <fieldset>
-                <legend class="dados-pessoais">Seus dados</legend>
-                <label for="nome">Nome:</label>
-                <input id="nome" name="nome-contato" placeholder="Seu nome aqui" autofocus required
-                        pattern="[A-Za-z ' \s]{4}" title="Mínimo 4 caracteres, sendo 1 letra maiúscula"
-                        tabindex="1" class="entrada-nome">
-                <label for="email">Email:</label>
-                <input id="email" name="email-contato" placeholder="seu@email.com" type="email" required
-                        tabindex="1" class="entrada-email">
-            </fieldset>
+        <div class="container">
+            <form>
+                <fieldset>
+                    <legend class="dados-pessoais">Seus dados</legend>
+                    <label for="nome" class="com-icone">Nome:</label>
+                    <input id="nome" name="nome-contato" type="text" placeholder="Seu nome aqui" autofocus required
+                            pattern="[A-Za-z ' \s]{4}" title="Mínimo 4 caracteres, sendo 1 letra maiúscula"
+                            tabindex="1" class="entrada-nome">
+                    <label for="email" class="com-icone">Email:</label>
+                    <input id="email" name="email-contato" placeholder="seu@email.com" type="email" required
+                            tabindex="1" class="entrada-email">
+                </fieldset>
 
-            <fieldset>
-                <legend class="assunto">Assunto:</legend>
+                <fieldset>
+                    <legend class="assunto">Assunto:</legend>
+                    <label>
+                        <input type="radio" name="assunto" value="Blog">
+                        Blog
+                    </label>
 
-                <select name="assunto">
-                    <option value="blog">Blog</option>
-                    <option value="servico">Serviço</option>
+                    <label>
+                        <input type="radio" name="assunto" value="Serviço">
+                        Serviço
+                    </label>
+
                     <fieldset>
-                        <option value="outro">
+                        <input type="radio" name="assunto" value="Outro" id="outro">
+                        <label for="outro">
                             Outro
-                            <input type="text" name="outro-assunto" tabindex="1">
-                        </option>
+                        </label>
+                        <input type="text" name="outro-assunto">
                     </fieldset>
-                </select>
 
-                <label for="msg">Mensagem:</label>
-                <textarea id="msg" name="mensagem" cols="30" rows="6"
-                          placeholder="Digite aqui sua mensagem" tabindex="1" class="entrada-msg"></textarea>
-                <button type="submit" class="botao-submit" tabindex="1">Enviar <strong>para mim</strong></button>
-            </fieldset>
-        </form>
+
+                </fieldset>
+                    <label for="msg">Mensagem:</label>
+                    <textarea id="msg" name="mensagem" cols="30" rows="6"
+                              placeholder="Digite aqui sua mensagem" tabindex="1" class="entrada-msg"></textarea>
+                    <button type="submit" class="botao-submit" tabindex="1">Enviar <strong>para mim</strong></button>
+             </form>
+        </div>
     </main>
+
+    <img src="imagens/eu.jpg" alt="Minha foto" class="minha-foto">
+    <aside class="navegacao-site">
+        <h1>João da Silva</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="bio.html">Sobre mim</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+        <ul class="icones-redes-sociais">
+            <li>
+                <a href="https://github.com/joaodasilva" class="github" data-tooltip="Veja meus projetos opensource">
+                    Github
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/joaodasilva" class="twitter" data-tooltip="Siga-me no Twitter">
+                    Twitter
+                </a>
+            </li>
+            <li>
+                <a href="https://br.linkedin.com/pub/joão-da-silva/32/4/508" class="linkedin" data-tooltip="Veja meu currículo">
+                    LinkedIn
+                </a>
+            </li>
+        </ul>
+    </aside>
 
     <footer class="rodape-pagina">
         &copy; João da Silva 2014
